--- a/mean of field.tex
+++ b/mean of field.tex
@@ -1,11 +1,7 @@
-\documentclass[12pt]{report}
+\documentclass{article}
+\usepackage{xcolor}
+\newcommand\myworries[1]{\textcolor{red}{#1}}
 \begin{document}
-
-
-\section{Expected energy in steady state}
-
-Unbelievable but variance and global energy are connected. Ma come?
-not so good, true only for er random graph
-
-
+Here is some text.
+\myworries{But I'm worried about the text}
 \end{document}
